@@ -292,6 +292,9 @@ static const char* Copyright = "(C) Copyright Michigan State University 2008, Al
 //     July 12, 1999 Ron FOx
 //        Added gpVersion and set it to be 0.2
 //   $Log$
+//   Revision 5.3  2007/02/17 02:34:59  ron-fox
+//   BZ292 - Synch the VERSION in config.h with gpVersion
+//
 //   Revision 5.2  2005/06/03 15:19:26  ron-fox
 //   Part of breaking off /merging branch to start 3.1 development
 //
@@ -386,4 +389,4 @@ CRunControl* gpRunControl = (CRunControl*)kpNULL;
 CAnalyzer* gpAnalyzer   = (CAnalyzer*)kpNULL;
 
 // SpecTcl also retains a version text string.
-const char* gpVersion = "3.0pre1"; 
+const char* gpVersion = VERSION;
